Fix first element in list not aligning in grid

--- a/Front/src/app/pokedex-list/pokedex-list.component.scss
+++ b/Front/src/app/pokedex-list/pokedex-list.component.scss
@@ -4,6 +4,11 @@
   .dx-list-item {
     border: 0;
     width: 20%;
+    min-height: 8rem;
+    height: 8rem;
+    max-height: 8rem;
+    overflow: hidden;
     float: left;
+    margin-top: 0 !important;
   }
 }
